--- a/app/src/main/res/layout/turn.xml
+++ b/app/src/main/res/layout/turn.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/forestbackground"
-    tools:context=".Controller.GameBehavior">
+    tools:context=".Controller.Combat">
 
     <FrameLayout
         android:id="@+id/heroStatsLayout"
@@ -320,7 +320,7 @@
                 style="@style/CustomButtonStyle"
                 android:layout_width="180dp"
                 android:layout_height="40dp"
-                android:text="@string/stun"
+                android:text="@string/sstun"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
